Imager release history.  Older releases can be found in Changes.old

Imager 0.81 - unreleased
===========

 - added coverage tests for masked images (maskimg.c @100% test coverage)

Bug fixes:

 - paletted writes to a masked image are now masked correctly.
   Revealed by new coverage tests.

 - update the filter plugin documentation.
   https://rt.cpan.org/Ticket/Display.html?id=56513

Imager 0.80 - 17 Jan 2011
===========

 - added coverage tests for Imager::Fountain and Imager::Color::Float

 - Imager is now maintained in git
   http://git.imager.perl.org/imager.git
   git://git.imager.perl.org/imager.git

Bug fixes:

 - images with an translucent alpha channel were not scaled correctly
   by the default (qtype=normal) scaling method.
   https://rt.cpan.org/Public/Bug/Display.html?id=63922

 - Imager::Color::Float now translates "#FFFFFF" to white instead of
   just a little darker.

 - make the default color map build algorithm "mediancut".  This
   changes the default color map builder for writing GIFs back to what
   it was in 0.77, reverting a performance regression.
   https://rt.cpan.org/Ticket/Display.html?id=64785

 - handle failure to create a masked image correctly

Imager 0.79 - 10 Dec 2010
===========

 - add Imager::Test to the POD coverage tests and document the missing
   functions.

 - the convert() method now optimizes the case where all output
   channels are either 0, sourced from a single input channel or 1.
   This significantly speeds up presets like "addalpha", "green".
   https://rt.cpan.org/Ticket/Display.html?id=51254

 - add wiggle.pl sample, as suggested by Dan Oppenheim.

 - add the combine() method to combine channels from multiple source
   images into a new image
   https://rt.cpan.org/Ticket/Display.html?id=11872

Bug fixes:

 - treat the co-efficients for convert() as doubles instead of floats.

 - If a higher (earlier) priority font handler failed to load, that
   would crash preventing loading of later font handlers.